fix: spacing

--- a/src/assets/styles/base/index.css
+++ b/src/assets/styles/base/index.css
@@ -309,6 +309,79 @@ hr {
   margin: var(--margin-vertical-base-horizontal-zero);
 }
 
+/* articles */
+article {
+  margin-bottom: var(--spacing-base);
+  border-bottom: var(--border-gray);
+
+  &:last-of-type {
+    border-bottom: none;
+  }
+
+  &.intro p {
+    margin-top: 0;
+  }
+
+  &.standalone .associated-media:last-of-type > hr {
+    display: none;
+  }
+
+  & h3 {
+    margin-top: 0;
+  }
+
+  & .post-meta {
+    display: flex;
+    align-items: center;
+    gap: var(--spacing-sm);
+
+    & svg {
+      stroke: var(--gray-dark);
+      width: var(--sizing-svg-sm);
+      height: var(--sizing-svg-sm);
+    }
+
+    & time {
+      color: var(--gray-dark);
+      font-size: var(--font-size-sm);
+    }
+  }
+}
+
+p + .associated-media,
+img + .associated-media,
+.banner + .associated-media {
+  margin-top: var(--spacing-base);
+  border-top: var(--border-gray);
+}
+
+.footnotes {
+  & .footnotes-list {
+    margin-bottom: 0;
+
+    & li:last-child {
+      margin-bottom: 0;
+    }
+
+    & .footnote-item > p {
+      display: inline;
+    }
+  }
+
+  &:has(~ *) {
+    margin-bottom: var(--spacing-base);
+  }
+}
+
+sup.footnote-ref {
+  line-height: var(--line-height-xs);
+}
+
+sup.footnote-ref a,
+.footnote-backref {
+  text-decoration: none;
+}
+
 /* tables */
 table {
   display: block;
